<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newPlaceBackgroundColor"
    tools:context=".Activity.NewWishPlaceActivity">

    <include layout="@layout/activity_toolbar"
        android:id="@+id/new_wish_place_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:transitionName="toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/back_button_icon"
        app:layout_constraintBottom_toBottomOf="@id/new_wish_place_toolbar"
        app:layout_constraintTop_toTopOf="@id/new_wish_place_toolbar"
        app:layout_constraintStart_toStartOf="@id/new_wish_place_toolbar"/>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_wish_place_toolbar">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_new_wishplace"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/placeNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place_name_hint"
            android:padding="10dp"
            android:maxLength="25"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/placeSummaryET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place_summary_hint"
            android:padding="10dp"
            android:maxLength="25"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/placeDescriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place_description_hint"
            android:padding="10dp"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_location_details"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_latitude"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/latitudeValueTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Unknown..."
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_longitude"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/longitudeValueTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Unknown..."
                android:layout_weight="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/findLocationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/findLocationButton"
            android:text="@string/place_find_button"/>
    </LinearLayout>

    <Button
        android:id="@+id/savePlaceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_save_button"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/saveNewPlaceButton"
        android:enabled="false"/>

</android.support.constraint.ConstraintLayout>